# DownloaderApp

./: README.txt
downloader_app/: .gitignore  Cargo.toml
downloader_app/src/: main.rs
downloader_app/src/websites/: streamable.rs
